--- a/build.gradle
+++ b/build.gradle
@@ -35,7 +35,7 @@ repositories {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-web'
     implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//    implementation 'commons-validator:commons-validator:1.10.0'
+    implementation 'org.springdoc:springdoc-openapi-starter-webmvc-ui:2.8.14'
     implementation 'org.springframework.boot:spring-boot-starter-validation:3.5.5'
     implementation 'com.fasterxml.uuid:java-uuid-generator:5.1.0'
 	runtimeOnly 'com.h2database:h2'
